--- a/Projects/Certification Project 1 - Survey Form/Other code/Hiding elements using CSS/styles.css
+++ b/Projects/Certification Project 1 - Survey Form/Other code/Hiding elements using CSS/styles.css
@@ -32,7 +32,7 @@ fieldset:last-of-type {
 }
 
 label {
-  display: block;
+  display: inline-block;
   margin: 0.5rem 0;
 }
 
@@ -56,23 +56,9 @@ input, textarea {
   vertical-align: middle;
 }
 
-input[type="submit"] {
-  display: block;
-  width: 60%;
-  margin: 1em auto;
-  height: 2em;
-  font-size: 1.1rem;
-  background-color: #3b3b4f;
-  border-color: white;
-  min-width: 300px;
-}
-
-input[type="file"] {
-  padding: 1px 2px;
-}
-
-a {
-  color: #dfdfe2;
+.hidden-rating {
+  margin: 2em auto 4em;
+  text-align: center;
 }
 
 
@@ -80,7 +66,13 @@ a {
   display: none;
 }
 
-input[type=radio]:checked ~ .hidden {
-   margin: 30px 0;
-   display: block;
+#dog-person-yes:checked ~ .hidden {
+  display: block;
+  margin: 2em auto 4em;
+  text-align: center;
+}
+
+.under {
+    display: block;
+    margin: 0 0.25em;
 }
