--- a/Projects/Certification Project 1 - Survey Form/Other code/Hiding elements using JS/styles.css
+++ b/Projects/Certification Project 1 - Survey Form/Other code/Hiding elements using JS/styles.css
@@ -56,31 +56,7 @@ input, textarea {
   vertical-align: middle;
 }
 
-input[type="submit"] {
-  display: block;
-  width: 60%;
-  margin: 1em auto;
-  height: 2em;
-  font-size: 1.1rem;
-  background-color: #3b3b4f;
-  border-color: white;
-  min-width: 300px;
-}
-
-input[type="file"] {
-  padding: 1px 2px;
-}
-
-a {
-  color: #dfdfe2;
-}
-
-
-.hidden {
-  display: none;
-}
-
-input[type=radio]:checked ~ .hidden {
-   margin: 30px 0;
-   display: block;
+.hidden-rating {
+  margin: 2em auto 4em;
+  text-align: center;
 }
