--- a/Projects/Certification Project 1 - Survey Form/styles.css
+++ b/Projects/Certification Project 1 - Survey Form/styles.css
@@ -1,10 +1,9 @@
 body {
   width: 100%;
   height: 100vh;
-  margin: 0;
-  background-color: #1b1b32;
+  background-image: url("Resources/Background.png");
   color: #f5f6f7;
-  font-family: Tahoma;
+  font-family: Times;
   font-size: 20px;
 }
 
@@ -16,12 +15,35 @@ h1, p {
 
 
 form {
+  background-color: #0d1c4f;
+  opacity: 95%;
   width: 60vw;
-  max-width: 500px;
+  max-width: 900px;
   min-width: 300px;
   margin: 0 auto;
-  padding-bottom: 2em;
+  padding: 0.5em 2em 2em 2em;
+  border-radius: 50px;
 }
+
+.titleBox {
+  background-color: #0d1c4f;
+  opacity: 100%;
+  width: 50vw;
+  max-width: 450px;
+  min-width: 150px;
+  margin: 2em auto 2em;
+  padding: 5px 1em 1em 1em;
+  border-radius: 25px;
+  color: #f5f6f7;
+  font-family: Georgia;
+  font-size: 21px;
+}
+
+.subTitleBox {
+  display: flex;
+  align-items:center;
+}
+
 
 fieldset {
   border: none;
