--- a/Lessons/Lesson 8 - Building a Quiz/styles.css
+++ b/Lessons/Lesson 8 - Building a Quiz/styles.css
@@ -35,4 +35,11 @@ nav > ul {
   justify-content: space-evenly;
 }
 
+h1,
+h2 {
+  font-family: Verdana, Tahoma;
+}
 
+h2 {
+  border-bottom: 4px solid #dfdfe2;
+}
