--- a/Lessons/Lesson 8 - Building a Quiz/styles.css
+++ b/Lessons/Lesson 8 - Building a Quiz/styles.css
@@ -35,6 +35,19 @@ nav > ul {
   justify-content: space-evenly;
 }
 
+nav > ul > li {
+  color: #dfdfe2;
+  margin: 0 0.2rem;
+  padding: 0.2rem;
+  display: block;
+}
+
+
+
+li > a {
+  color: inherit;
+}
+
 h1,
 h2 {
   font-family: Verdana, Tahoma;
@@ -42,6 +55,10 @@ h2 {
 
 h2 {
   border-bottom: 4px solid #dfdfe2;
+}
+
+p::before {
+  content: "Question #";
 }
 
 .sr-only {
