--- a/Projects/Certification Project 2 - Tribute Page/css/styles.css
+++ b/Projects/Certification Project 2 - Tribute Page/css/styles.css
@@ -84,37 +84,30 @@ html {
   }
 
 
-  .data > div {
+  ul.data > li > div.titleData, ul.data > li > div.vaData {
     display: none;
 }
 
-  .data > div:nth-of-type(odd) {
-      height: 100%;
-      width: inherit;
-      margin: 0 0 0 -50%;
-      padding: 0;
-      padding: 15px;
-      border-radius: 10px;
-      background: rgb(199, 76, 76);
-      overflow: hidden;
-  }
-
-  .data > div:nth-of-type(even) {
-      background-color: rgba(0, 255, 0, 0.5);
-  }
-
-  .data > li:has(a:nth-of-type(odd):focus) + div:nth-of-type(odd), 
-  .data > li:has(a:nth-of-type(even):focus) + div:nth-of-type(odd) + div:nth-of-type(even) {
-      display:inline-block;
+  ul.data > li > a.titleData:focus ~ div.titleData {
+    height: 300px;
+    width: 300px;
+    background: rgb(199, 76, 76);
 
   }
 
-  /* div[id=titleContent] ~ works as well
-    If a li has a clicked link (either the first or second / odd or even - for within the whole div), 
-    then select the first div after it (odd) or the second div (the div after the first / odd one - even)
-  */
+  ul.data > li > a.vaData:focus ~ div.vaData {
+    height: 300px;
+    width: 300px;
+    background: rgb(76, 199, 82);
+  }
 
-  .data > div > img {
+  ul.data > li > a.titleData:focus ~ div.titleData, 
+  ul.data > li > a.vaData:focus ~ div.vaData {
+    display: block;
+  }
+
+
+  .data > ul > img {
     height: 50%;
     width: 25%;
     float: left;
