--- a/Projects/Certification Project 2 - Tribute Page/css/styles.css
+++ b/Projects/Certification Project 2 - Tribute Page/css/styles.css
@@ -84,23 +84,29 @@ html {
   }
 
 
-  ul.data > li > div.titleData, ul.data > li > div.vaData {
+  ul.vacData > li > div.titleData, ul.vacData > li > div.vaData, ul.mcData > li > div.albumData {
     display: none;
     height: 100%;
     width: 100%;
 }
 
-  ul.data > li > a.titleData:focus ~ div.titleData {
+  ul.vacData > li > a.titleData:focus ~ div.titleData {
     background: rgb(199, 76, 76);
 
   }
 
-  ul.data > li > a.vaData:focus ~ div.vaData {
+  ul.vacData > li > a.vaData:focus ~ div.vaData {
     background: rgb(76, 199, 82);
   }
 
-  ul.data > li > a.titleData:focus ~ div.titleData, 
-  ul.data > li > a.vaData:focus ~ div.vaData {
+  ul.mcData > li > a.albumData:focus ~ div.albumData {
+    background: rgb(76, 105, 199);
+  }
+
+
+  ul.vacData > li > a.titleData:focus ~ div.titleData, 
+  ul.vacData > li > a.vaData:focus ~ div.vaData,
+  ul.mcData > li > a.albumData:focus ~ div.albumData {
     display: block;
   }
 
@@ -114,3 +120,23 @@ html {
     min-width: 150px;
     min-height: 300px;
 }
+
+  .vaData > img {
+    height: 50%;
+    width: 25%;
+    float: left;
+    margin: 0 10px 0 0;
+    border-radius: 10px;
+    min-width: 150px;
+    min-height: 300px;
+  }
+
+  .albumData > img {
+    height: 50%;
+    width: 25%;
+    float: left;
+    margin: 0 10px 0 0;
+    border-radius: 10px;
+    min-width: 150px;
+    min-height: 300px;
+  }
