--- a/Projects/Certification Project 2 - Tribute Page/css/styles.css
+++ b/Projects/Certification Project 2 - Tribute Page/css/styles.css
@@ -170,3 +170,17 @@ html {
     left: 2%;
     margin-right: -15%;
   }
+
+
+  .mcPlayer {
+    background-color: #04AA6D;
+    border: none;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 10px;
+  }
