--- a/Projects/Certification Project 2 - Tribute Page/css/styles.css
+++ b/Projects/Certification Project 2 - Tribute Page/css/styles.css
@@ -172,7 +172,7 @@ html {
 
 
   .mcPlayer {
-    background-color: #04AA6D;
+    background: none;
     border: none;
     color: white;
     padding: 10px;
@@ -182,4 +182,10 @@ html {
     font-size: 16px;
     margin: 4px 2px;
     border-radius: 10px;
+  }
+
+  .mcPlayerImg {
+    padding-top: 100px;
+    height: 50px;
+    margin: 40px 2px;
   }
